fix spacing

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ main {
 @media (max-width: 450px) {
   main {
     margin: 0;
+    width: 100vw;
     border-radius: 0;
     min-height: 100vh;
   }
@@ -86,11 +87,7 @@ footer {
 
 .options {
   display: flex;
-}
-@media (max-width: 400px) {
-  .options {
-    flex-direction: column;
-  }
+  flex-direction: column;
 }
 
 .btn {
@@ -135,7 +132,7 @@ footer {
   background-color: rgb(77, 91, 158);
   border-radius: 15px;
   height: 52px;
-  width: 193px;
+  width: 100%;
   color: white;
   border: none;
   font-size: 20px;
@@ -150,6 +147,7 @@ footer {
   display: flex;
   align-items: center;
   font-size: 20px;
+  margin: auto;
 }
 @media (max-width: 450px) {
   .result {
